# slamscene

./: .gitignore  CMakeLists.txt  README.md
src/: SlamSystem.cpp  SlamSystem.h  main_on_images.cpp  test.cpp
src/DepthEstimation/: DepthMap.cpp
src/IOWrapper/: Timestamp.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/util/: FrameReader.cpp  FrameReader.h  PoseWriter.cpp  PoseWriter.h  SophusUtil.cpp  TrackFrameDebug.cpp  TrackFrameDebug.h  Undistorter.cpp  Undistorter.h
tools/: cvutil.py  load_images_into_hdf5.py  load_video_into_hdf5.py  show_images.py  visualize_poses.py
